--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,5 @@
 html {
   width: 100%;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-  background-color: #2f3542;
+  max-width: 100%;
+  box-sizing: border-box;
 }
