--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   width: 100%;
 }
 
-body {
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  box-sizing: border-box;
-}
